--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,8 +11,10 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
+    cowplot,
     fastcluster,
     ggplot2,
     matrixStats,
     methods,
+    rlang,
     WGCNA
