--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,3 +4,15 @@ export(applyFilter)
 export(calcSoftPower)
 export(checkFilter)
 export(coexList)
+export(plotSoftPower)
+importFrom(cowplot,plot_grid)
+importFrom(ggplot2,aes)
+importFrom(ggplot2,geom_hline)
+importFrom(ggplot2,geom_line)
+importFrom(ggplot2,geom_point)
+importFrom(ggplot2,ggplot)
+importFrom(ggplot2,scale_x_continuous)
+importFrom(ggplot2,theme_bw)
+importFrom(ggplot2,xlab)
+importFrom(ggplot2,ylab)
+importFrom(rlang,.data)
