--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,13 @@ Imports:
     ggplot2,
     matrixStats,
     methods,
+    minet,
     rlang,
     SummarizedExperiment,
     WGCNA
+Suggests: 
+    knitr,
+    rmarkdown,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
+VignetteBuilder: knitr
