update with normCounts function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(calcAdjacency)
 export(calcSoftPower)
 export(checkFilter)
 export(coexList)
+export(normCounts)
 export(plotSoftPower)
 exportClasses(coexList)
 exportMethods(as.S3hclust)
