update documentation after re-build

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,10 +4,13 @@ export(applyFilter)
 export(as.S3hclust)
 export(calcAdjacency)
 export(calcSoftPower)
+export(calcTOM)
+export(calcTree)
 export(checkFilter)
 export(coexList)
 export(normCounts)
 export(plotSoftPower)
+export(plotTree)
 exportClasses(coexList)
 exportMethods(as.S3hclust)
 exportMethods(show)
@@ -26,4 +29,5 @@ importFrom(ggplot2,theme_bw)
 importFrom(ggplot2,xlab)
 importFrom(ggplot2,ylab)
 importFrom(rlang,.data)
+importFrom(stats,as.dist)
 importMethodsFrom(SummarizedExperiment,show)
