add new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(calcTree)
 export(checkFilter)
 export(coexList)
 export(normCounts)
+export(plotPCA)
 export(plotSoftPower)
 export(plotTree)
 exportClasses(coexList)
