add export for new functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,15 +3,16 @@
 export(applyFilter)
 export(as.S3hclust)
 export(calcAdjacency)
+export(calcModuleEigengenes)
 export(calcSoftPower)
 export(calcTOM)
 export(calcTree)
 export(checkFilter)
 export(coexList)
 export(normCounts)
+export(plotModuleTree)
 export(plotPCA)
 export(plotSoftPower)
-export(plotTree)
 exportClasses(coexList)
 exportMethods(as.S3hclust)
 exportMethods(show)
