--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,11 +4,13 @@ export(applyFilter)
 export(as.S3hclust)
 export(calcAdjacency)
 export(calcModuleEigengenes)
+export(calcModuleMembership)
 export(calcSoftPower)
 export(calcTOM)
 export(calcTree)
 export(checkFilter)
 export(coexList)
+export(getModuleMembership)
 export(normCounts)
 export(plotModuleTree)
 export(plotPCA)
