Change name of S4 class from coexList to CoexList to be in line with Bioconductor standards

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,6 +11,7 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
 Imports:
+    BiocParallel,
     caret,
     cowplot,
     dynamicTreeCut,
@@ -21,7 +22,6 @@ Imports:
     matrixStats,
     methods,
     minet,
-    parallel,
     rlang,
     stringr,
     SummarizedExperiment,
