--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,13 +9,13 @@ export(calcSoftPower)
 export(calcTOM)
 export(calcTree)
 export(checkFilter)
-export(coexList)
+export(CoexList)
 export(getModuleMembership)
 export(normCounts)
 export(plotModuleTree)
 export(plotPCA)
 export(plotSoftPower)
-exportClasses(coexList)
+exportClasses(CoexList)
 exportMethods(as.S3hclust)
 exportMethods(show)
 import(SummarizedExperiment)
